--- a/KinectingPepper/UI/BodyViewer.xaml
+++ b/KinectingPepper/UI/BodyViewer.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Kinect_ing_Pepper.UI.SkeletonViewer"
+﻿<UserControl x:Class="Kinect_ing_Pepper.UI.BodyViewer"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,11 +7,14 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300"
              BorderThickness="1" BorderBrush="Black">
-    <Grid Background="Black">
+    <Grid>
         <Viewbox Margin="0,0,0,0">
-            <Image Name="camera" Source="{Binding KinectImage}" Stretch="UniformToFill"/>
-            <!--<Canvas Name="canvasSkeleton" />-->
+            <Grid Background="Black">
+                <Image Name="camera" Source="{Binding KinectImage}" Stretch="UniformToFill" HorizontalAlignment="Left"/>
+                <Canvas Name="canvasSkeleton" />
+            </Grid>
         </Viewbox>
-        <Label Name="lblImageType" Content="{Binding FPSDescription}" Foreground="DarkCyan" FontSize="20" HorizontalAlignment="Left" Margin="65,0,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.702,-1.913"/>
+
+        <Label Name="lblImageType" Content="{Binding FPSDescription}" Foreground="DarkCyan" FontSize="20" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.702,-1.913"/>
     </Grid>
 </UserControl>
