--- a/KinectingPepper/UI/RecordPage.xaml
+++ b/KinectingPepper/UI/RecordPage.xaml
@@ -21,6 +21,6 @@
             <Label  Grid.Column="0" Margin="10 0 0 0" HorizontalAlignment="Left" VerticalAlignment="Top">Select camera type:</Label>
             <ComboBox Grid.Column="1" Name="cbxCameraType" Margin="10 0 0 0" HorizontalAlignment="Left" VerticalAlignment="Top" SelectionChanged="cbxCameraType_SelectionChanged"></ComboBox>
         </Grid>
-        <local:BodyViewer Grid.Row="1" x:Name="skeletonViewer" Margin="10"/>
+        <local:BodyViewer Grid.Row="1" x:Name="bodyViewer" Margin="10"/>
     </Grid>
 </Page>
