--- a/KinectingPepper/UI/RecordPage.xaml
+++ b/KinectingPepper/UI/RecordPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Kinect_ing_Pepper.UI.SkeletonPage"
+﻿<Page x:Class="Kinect_ing_Pepper.UI.RecordPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -21,6 +21,6 @@
             <Label  Grid.Column="0" Margin="10 0 0 0" HorizontalAlignment="Left" VerticalAlignment="Top">Select camera type:</Label>
             <ComboBox Grid.Column="1" Name="cbxCameraType" Margin="10 0 0 0" HorizontalAlignment="Left" VerticalAlignment="Top" SelectionChanged="cbxCameraType_SelectionChanged"></ComboBox>
         </Grid>
-        <local:SkeletonViewer Grid.Row="1" x:Name="skeletonViewer" Margin="10"/>
+        <local:BodyViewer Grid.Row="1" x:Name="bodyViewer" Margin="10"/>
     </Grid>
 </Page>
