--- a/KinectingPepper/UI/RewindPage.xaml
+++ b/KinectingPepper/UI/RewindPage.xaml
@@ -20,16 +20,17 @@
                 <ColumnDefinition Width="auto"></ColumnDefinition>
                 <ColumnDefinition Width="auto"></ColumnDefinition>
                 <ColumnDefinition Width="auto"></ColumnDefinition>
+                <ColumnDefinition Width="auto"></ColumnDefinition>
                 <ColumnDefinition Width="*"></ColumnDefinition>
                 <ColumnDefinition Width="auto"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <Button Grid.Column="0" Margin="20 10 20 0" HorizontalAlignment="Left" Padding="10 5 10 5" Click="selectFile_Click">Select file</Button>
-            <Label  Grid.Column="1" Margin="20 10 0 0" HorizontalAlignment="Left" VerticalAlignment="Top">Select camera type:</Label>
-            <ComboBox Grid.Column="2" Name="cbxCameraType" Margin="20 15 0 0" HorizontalAlignment="Left" VerticalAlignment="Top" SelectionChanged="cbxCameraType_SelectionChanged"></ComboBox>
-            <Button Grid.Column="3" Margin="20 10 20 0" HorizontalAlignment="Left" Padding="10 5 10 5" Click="resetPlayer_Click">Reset</Button>
-            <Button Grid.Column="4" Margin="20 10 20 0" HorizontalAlignment="Left" Padding="10 5 10 5" Click="pausePlayer_Click">Pause</Button>
-            <Label Grid.Column="5" Margin="20 10 20 0" HorizontalAlignment="Stretch"></Label>
-            <Button Grid.Column="6" Margin="20 10 20 0" HorizontalAlignment="Right" Padding="10 5 10 5" Click="navigateToRecordPage_Click">Record Page</Button>
+            <Button Grid.Column="0" Name="btnSelectFile" Margin="10 5 10 0" HorizontalAlignment="Left" Padding="20 5 20 5" Click="selectFile_Click">Select file</Button>
+            <Label  Grid.Column="1" Name="lblSelectCameraType" Margin="10 10 0 0" HorizontalAlignment="Left" VerticalAlignment="Top">Select camera type:</Label>
+            <ComboBox Grid.Column="2" Name="cbxCameraType" Margin="10 15 0 0" Padding="10 0 10 0" HorizontalAlignment="Left" VerticalAlignment="Top" SelectionChanged="cbxCameraType_SelectionChanged"></ComboBox>
+            <Button Grid.Column="3" Name="btnResetPlayer" Margin="50 5 20 0" HorizontalAlignment="Left" Padding="10 5 10 5" Click="resetPlayer_Click">Reset</Button>
+            <Button Grid.Column="4" Name="btnPausePlayer" Margin="20 5 20 0" HorizontalAlignment="Left" Padding="10 5 10 5" Click="pausePlayer_Click">Pause</Button>
+            <Slider Grid.Column="5" Name="sdrRewindSlider" Margin="40 10 40 0" Maximum="100" TickPlacement="BottomRight" TickFrequency="1"/>
+            <Button Grid.Column="7" Name="btnNavigateToRecordPage" Margin="20 5 20 0" HorizontalAlignment="Right" Padding="10 5 10 5" Click="navigateToRecordPage_Click">Record Page</Button>
         </Grid>
     </Grid>
 </Page>
