X1.1.4 ui terugkijken van data (#3)
* Added new page to rewind the videos, made navigation possible between the two screens.

* Made the RewindPage prettier, added navigation between the two pages

* RewindPage combobox added listitems, removed unnecessary imports

--- a/KinectingPepper/UI/RecordPage.xaml
+++ b/KinectingPepper/UI/RecordPage.xaml
@@ -21,12 +21,14 @@
                 <ColumnDefinition Width="*"></ColumnDefinition>
                 <ColumnDefinition Width="*"></ColumnDefinition>
                 <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <Label  Grid.Column="0" Margin="20 10 0 0" HorizontalAlignment="Left" VerticalAlignment="Top">Select camera type:</Label>
             <ComboBox Grid.Column="1" Name="cbxCameraType" Margin="20 15 0 0" HorizontalAlignment="Left" VerticalAlignment="Top" SelectionChanged="cbxCameraType_SelectionChanged"></ComboBox>
-            <Button Grid.Column="2" Name="btnStartRecording" Margin="10 0 10 0" Click="startRecordingButton_Click" HorizontalAlignment="Stretch">Start</Button>
-            <Button Grid.Column="3" Name="btnStopRecording" Margin="10 0 10 0" Click="stopRecordingButton_Click"  HorizontalAlignment="Stretch">Stop</Button>
+            <Button Grid.Column="2" Name="btnStartRecording" Margin="10 5 10 0" Click="startRecordingButton_Click" HorizontalAlignment="Stretch">Start</Button>
+            <Button Grid.Column="3" Name="btnStopRecording" Margin="10 5 10 0" Click="stopRecordingButton_Click"  HorizontalAlignment="Stretch">Stop</Button>
             <Label Grid.Column="4" Name="placeholder2"></Label>
+            <Button Grid.Column="5" Name="btnRewindPageNavigation" Margin="20 5 20 0" Click="navigateToRewindPage_Click" Padding="10 5 10 5" HorizontalAlignment="Right">Rewind Page</Button>
         </Grid>
     </Grid>
 </Page>
