--- a/KinectingPepper/UI/RecordPage.xaml
+++ b/KinectingPepper/UI/RecordPage.xaml
@@ -18,18 +18,20 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="auto"></ColumnDefinition>
                 <ColumnDefinition Width="auto"></ColumnDefinition>
+                <ColumnDefinition Width="auto"></ColumnDefinition>
                 <ColumnDefinition Width="*"></ColumnDefinition>
                 <ColumnDefinition Width="*"></ColumnDefinition>
                 <ColumnDefinition Width="*"></ColumnDefinition>
                 <ColumnDefinition Width="*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <Label  Grid.Column="0" Margin="20 10 0 0" HorizontalAlignment="Left" VerticalAlignment="Top">Select camera type:</Label>
-            <ComboBox Grid.Column="1" Name="cbxCameraType" Margin="20 15 0 0" HorizontalAlignment="Left" VerticalAlignment="Top" SelectionChanged="cbxCameraType_SelectionChanged"></ComboBox>
-            <Button Grid.Column="2" Name="btnStartRecording" Margin="10 0 10 0" Click="startRecordingButton_Click" HorizontalAlignment="Stretch">Start</Button>
-            <Button Grid.Column="3" Name="btnStopRecording" Margin="10 0 10 0" Click="stopRecordingButton_Click"  HorizontalAlignment="Stretch">Stop</Button>
-            <Button Grid.Column="4" Name="btnNewPerson" Margin="10 0 10 0" Click="newPersonButton_Click"  HorizontalAlignment="Stretch">New Person</Button>
-            <Label Grid.Column="5" Name="placeholder2"></Label>
-            <Button Grid.Column="6" Name="btnRewindPageNavigation" Margin="20 5 20 0" Click="navigateToRewindPage_Click" Padding="10 5 10 5" HorizontalAlignment="Right">Rewind Page</Button>
+            <Button Grid.Column="0" Name="btnRestartKinect" Margin="10 0 10 0" Padding="15 10 15 10" VerticalAlignment="Center" HorizontalAlignment="Left" Click="RestartKinectButton_Click">Restart Kinect</Button>
+            <Label  Grid.Column="1" Margin="20 10 0 0" HorizontalAlignment="Left" VerticalAlignment="Top">Select camera type:</Label>
+            <ComboBox Grid.Column="2" Name="cbxCameraType" Margin="20 15 0 0" HorizontalAlignment="Left" VerticalAlignment="Top" SelectionChanged="cbxCameraType_SelectionChanged"></ComboBox>
+            <Button Grid.Column="3" Name="btnStartRecording" Margin="10 0 10 0" Click="startRecordingButton_Click" HorizontalAlignment="Stretch">Start</Button>
+            <Button Grid.Column="4" Name="btnStopRecording" Margin="10 0 10 0" Click="stopRecordingButton_Click"  HorizontalAlignment="Stretch">Stop</Button>
+            <Button Grid.Column="5" Name="btnNewPerson" Margin="10 0 10 0" Click="newPersonButton_Click"  HorizontalAlignment="Stretch">New Person</Button>
+            <Label Grid.Column="6" Name="placeholder2"></Label>
+            <Button Grid.Column="7" Name="btnRewindPageNavigation" Margin="20 5 20 0" Click="navigateToRewindPage_Click" Padding="10 5 10 5" HorizontalAlignment="Right">Rewind Page</Button>
         </Grid>
     </Grid>
 </Page>
