--- a/KinectingPepper/UI/RecordPage.xaml
+++ b/KinectingPepper/UI/RecordPage.xaml
@@ -11,7 +11,8 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"></RowDefinition>
-            <RowDefinition Height="60"></RowDefinition>
+            <RowDefinition Height="50"></RowDefinition>
+            <RowDefinition Height="100"></RowDefinition>
         </Grid.RowDefinitions>
         <local:BodyViewer Grid.Row="0" x:Name="bodyViewer" Margin="10"/>
         <Grid Grid.Row="1" x:Name="buttonFooter" Margin="10 0 10 15">
@@ -31,5 +32,6 @@
             <Label Grid.Column="5" Name="placeholder2"></Label>
             <Button Grid.Column="6" Name="btnRewindPageNavigation" Margin="20 5 20 0" Click="navigateToRewindPage_Click" Padding="10 5 10 5" HorizontalAlignment="Right">Rewind Page</Button>
         </Grid>
+        <ListView Name="logList" Grid.Row="2" Margin="5"></ListView>
     </Grid>
 </Page>
