--- a/KinectingPepper/UI/RewindPage.xaml
+++ b/KinectingPepper/UI/RewindPage.xaml
@@ -29,7 +29,7 @@
             <ComboBox Grid.Column="2" Name="cbxCameraType" Margin="10 15 0 0" Padding="10 0 10 0" HorizontalAlignment="Left" VerticalAlignment="Top" SelectionChanged="cbxCameraType_SelectionChanged"></ComboBox>
             <Button Grid.Column="3" Name="btnResetPlayer" Margin="50 5 20 0" HorizontalAlignment="Left" Padding="10 5 10 5" Click="resetPlayer_Click">Reset</Button>
             <Button Grid.Column="4" Name="btnPausePlayer" Margin="20 5 20 0" HorizontalAlignment="Left" Padding="10 5 10 5" Click="pausePlayer_Click">Pause</Button>
-            <Slider Grid.Column="5" Name="sdrRewindSlider" Margin="40 10 40 0" Maximum="100" TickPlacement="BottomRight" TickFrequency="1"/>
+            <Slider Grid.Column="5" Name="slrFrameProgress" Margin="40 10 40 0" Maximum="100" TickPlacement="BottomRight" TickFrequency="1"/>
             <Button Grid.Column="7" Name="btnNavigateToRecordPage" Margin="20 5 20 0" HorizontalAlignment="Right" Padding="10 5 10 5" Click="navigateToRecordPage_Click">Record Page</Button>
         </Grid>
     </Grid>
