--- a/KinectingPepper/UI/BodyViewer.xaml
+++ b/KinectingPepper/UI/BodyViewer.xaml
@@ -10,9 +10,8 @@
     <Grid>
         <Viewbox Margin="0,0,0,0">
             <Grid>
-                <MediaElement Name="mediaElement" Stretch="UniformToFill" LoadedBehavior="Manual" Width="512" Height="424"></MediaElement>
-                <Image Name="camera" Source="{Binding KinectImage}" Stretch="UniformToFill" HorizontalAlignment="Left"/>
-                <Canvas Name="canvasSkeleton" />
+                <Image Name="camera" Source="{Binding KinectImage}"/>
+                <Canvas Name="canvasSkeleton"/>
             </Grid>
         </Viewbox>
 
