--- a/KinectingPepper/UI/BodyViewer.xaml
+++ b/KinectingPepper/UI/BodyViewer.xaml
@@ -9,9 +9,9 @@
              BorderThickness="1" BorderBrush="Black">
     <Grid>
         <Viewbox Margin="0,0,0,0">
-            <Grid Background="Black">
-                <Image Name="camera" Source="{Binding KinectImage}" Stretch="UniformToFill" HorizontalAlignment="Left"/>
-                <Canvas Name="canvasSkeleton" />
+            <Grid>
+                <Image Name="camera" Source="{Binding KinectImage}"/>
+                <Canvas Name="canvasSkeleton"/>
             </Grid>
         </Viewbox>
 
